# hello-world-minimal-rust

./: Cargo.toml
src/: main.rs
